# framework

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/codeql/: config.yml
.github/workflows/: codeql-analysis.yml  deploy-docs.yaml  tests.yml
docs/: bootstrap.md  collections.md  configuration.md  directory-structure.md  index.md  installation.md  ioc-container.md  middlewares.md  providers.md  routers.md  service-providers.md
docs/database/: getting-started.md
docs/orm/: models.md
docs_src/bootstrap/: lifespan_example.py
docs_src/configuration/: app_config_example.py  config_interface_example.py  config_repo_interface_example.py  env_example  facade_example.py  repo_example.py  retrieval_methods_2_example.py  retrieval_methods_3_example.py  retrieval_methods_example.py
docs_src/ioc_container/: basic_01_example.py  basic_02_example.py  bind_example.py  bind_if_example.py  bound_example.py  call_example.py  contextual_binding_example.py  hero_stats.py  instance_example.py  interface_01_example.py  interface_02_example.py  interface_03_example.py  resolve_example.py  resolve_with_string_example.py  scoped_decorator_example.py  scoped_example.py  scoped_if_example.py  singleton_decorator_example.py  singleton_example.py  singleton_if_example.py
docs_src/middlewares/: middlewares_example.py  middlewares_service_providers.py
docs_src/routers/: router_example.py  routers_example.py
docs_src/service_providers/: custom_provider.py  database_service_providers_001.py  database_service_providers_002.py  database_service_providers_003.py  database_service_providers_004.py  providers.py  routers_service_providers.py
pyrannic/: __init__.py  application.py  facades.py
pyrannic/bootstrap/: __init__.py  instance_service_provider.py  manager.py  service_provider.py
pyrannic/config/: configuration.py  env.py  provider.py  repository.py
pyrannic/container/: container.py  contextual_binding_builder.py  param_functions.py  params.py
pyrannic/container/decorators/: __init__.py  scoped.py  singleton.py
pyrannic/contracts/: __init__.py  application.py
pyrannic/contracts/config/: configuration.py  respository.py
pyrannic/contracts/container/: __init__.py  container.py  contextual_binding_builder.py
pyrannic/contracts/database/: connector.py  manager.py  migration.py  schema.py
pyrannic/contracts/http/: request.py
pyrannic/contracts/http/resources/: collection.py  resource.py
pyrannic/contracts/orm/: __init__.py  async_repository.py  model.py  query_builder.py  repository.py  scope.py
pyrannic/contracts/orm/mixins/: has_timestamps.py  soft_deletes.py
pyrannic/contracts/pagination/: paginator.py
pyrannic/contracts/support/: serializable.py
pyrannic/database/: __init__.py  manager.py  migration.py  provider.py
pyrannic/http/: providers.py
pyrannic/http/exceptions/: exception.py  forbidden.py  request_validation_exception.py  resource_not_found.py  unauthorized.py  unprocessable_entity.py
pyrannic/http/middlewares/: forget_scoped_instances.py
pyrannic/http/resources/: __init__.py  collection.py  resource.py
pyrannic/http/resources/mixins/: has_timestamps.py  soft_deletes.py
pyrannic/ioc/: __init__.py
pyrannic/logging/: provider.py
pyrannic/orm/: __init__.py  abstract_model.py
pyrannic/orm/sqlalchemy/: __init__.py  abstract_query_builder.py  async_query_builder.py  async_repository.py  connector.py  inspectionable.py  model.py  query_builder.py  repository.py  schema.py  serializable.py  session.py
pyrannic/orm/sqlalchemy/mixins/: has_timestamps.py  soft_deletes.py
pyrannic/orm/sqlalchemy/scopes/: soft_deleting_scope.py
pyrannic/pagination/: __init__.py  meta.py  paginator.py  request.py
pyrannic/support/: datetime.py  importing.py  inflect.py  path.py  reflection.py  string.py
pyrannic/support/collections/: dot_dict.py
pyrannic/support/facades/: __init__.py  app.py  config.py  facade.py
tests/: conftest.py
tests/application/: .env  main.py
tests/application/app/providers/: app.py
tests/application/app/repositories/: heroes.py
tests/application/bootstrap/: middlewares.py  providers.py  routers.py
tests/application/config/: database.py  logging.py  services.py
tests/client/: conftest.py
tests/unit/: asserts.py
tests/unit/container/: conftest.py
tests/unit/database/: test_database_provider.py  test_migration.py  utils.py
tests/unit/orm/: test_abstract_model.py  utils.py
tests/unit/pagination/: conftest.py  test_meta.py  test_paginator.py  test_request.py
(+123 files in other folders)
