[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
dynamic = ["version"]
name = "pyrannic"
description = "An opinionated web application framework built over the shoulders of FastAPI, Pydantic and SQLAlchemy."
authors = [
    { name = "David Arias Vázquez", email = "dav.surf@gmail.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.136.1",
    "sqlalchemy>=2.0.49",
]

[tool.pdm]
version = { source = "file", path = "pyrannic/__init__.py" }

[dependency-groups]
dev = [
    { include-group = "docs" },
    "alembic>=1.18.4",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

docs = [
    "mkdocs-material>=9.7.6",
]
