[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
dynamic = ["version"]
name = "pyrannic"
description = "An opinionated web application framework built over the shoulders of FastAPI, Pydantic and SQLAlchemy."
authors = [
    { name = "David Arias Vázquez", email = "dav.surf@gmail.com" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.136.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    { include-group = "docs" },
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
]

docs = [
    "mkdocs-material>=9.7.6",
]

[pytest]
mock_use_standalone_module = true

[tool.pdm]
version = { source = "file", path = "pyrannic/__init__.py" }

[tool.coverage.run]
omit = [
    "pyrannic/contracts/*",
]

[project.urls]
Homepage = "https://pyrannic.github.io/framework"
Documentation = "https://pyrannic.github.io/framework"
Repository = "https://github.com/pyrannic/framework"
Issues = "https://github.com/pyrannic/framework/issues"
Changelog = "https://pyrannic.github.io/framework/release-notes"
